--- a/index.html
+++ b/index.html
@@ -1,16 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+        integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="styles/style.css">
     <link rel="stylesheet" href="styles/mobileresponsive.css">
     <link rel="stylesheet" href="styles/tabletresponsive.css">
-    <title>Document</title>
+    <link rel="shortcut icon" href="./favicon-32x32.png" type="image/x-icon">
+    <title>Gamer-Zone</title>
 </head>
+
 <body>
     <header>
+        <nav>
+            <div class="nav-container">
+                <div class="logo-container">
+                    <img src="./images/Frame.png" alt="">
+                    <h3><span>G</span>amer</h3>
+                </div>
+                <div class="nav-option-container">
+                    <div class="first-option">
+                        <a href="">About Us</a>
+                        <a href="">Developers</a>
+                    </div>
 
+                    <div class="second-option">
+                        <a href="">Follow Us On</a>
+                        <a href=""><i class="fa-brands fa-facebook"></i></a>
+                        <a href=""><i class="fa-brands fa-tiktok"></i></a>
+                    </div>
+
+                </div>
+            </div>
+        </nav>
     </header>
 
     <main>
@@ -18,7 +44,8 @@
     </main>
 
     <footer>
-        
+
     </footer>
 </body>
+
 </html>
