--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 
 <body>
     <header>
+        <!-- nav section start from here -->
         <nav>
             <div class="nav-container">
                 <div class="logo-container">
@@ -37,10 +38,27 @@
                 </div>
             </div>
         </nav>
+        <!-- !-- nav ends start from here -->
     </header>
 
     <main>
-
+        <!-- banner section starts from here -->
+        <section>
+            <div class="banner-container">
+                <div class="banner-title-container">
+                     <h3>Play Like The</h3>
+                     <h1>G.O.A.T.</h1>
+                     <p>1-Click instant play</p>
+                     <p>No Download</p>
+                     <p>1000s of supported online games</p>
+                     <button>SignIn</button>
+                     <button>Go Rouge</button>
+                </div>
+                <div  class="banner-image-container">
+                    <img src="./images/Group 18.png" alt="">
+                </div>
+            </div>
+        </section>
     </main>
 
     <footer>
