--- a/index.html
+++ b/index.html
@@ -43,16 +43,18 @@
 
     <main>
         <!-- banner section starts from here -->
-        <section>
+        <section class="banner-section">
             <div class="banner-container">
                 <div class="banner-title-container">
                      <h3>Play Like The</h3>
                      <h1>G.O.A.T.</h1>
-                     <p>1-Click instant play</p>
+                     <div class="banner-info">
+                        <p>1-Click instant play</p>
                      <p>No Download</p>
                      <p>1000s of supported online games</p>
-                     <button>SignIn</button>
-                     <button>Go Rouge</button>
+                     </div>
+                     <button class="signin">SignIn</button>
+                     <button class="go-rouge">Go Rouge</button>
                 </div>
                 <div  class="banner-image-container">
                     <img src="./images/Group 18.png" alt="">
