--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
                      <p>No Download</p>
                      <p>1000s of supported online games</p>
                      </div>
-                     <button class="signin">SignIn</button>
-                     <button class="go-rouge">Go Rouge</button>
+                     <button class="signin btn">SignIn</button>
+                     <button class="go-rouge btn">Go Rouge</button>
                 </div>
                 <div  class="banner-image-container">
                     <img src="./images/Group 18.png" alt="">
