--- a/index.html
+++ b/index.html
@@ -61,6 +61,45 @@
                 </div>
             </div>
         </section>
+        <!-- banner section ends here -->
+
+        <!-- optional section starts from here -->
+        <section>
+
+        </section>
+        <!-- optional section ends from here -->
+
+        <!-- funny games section start from here -->
+        <section class="funny-games-section">
+            <div class="funny-games-title">
+                <h3>Online Games <span>Funny Videos</span></h3>
+                <p>A Collection of Hilarious Videos to Brighten Your Day</p>
+            </div>
+
+            <div class="video-container">
+                <div class="video-single">
+                       <img src="./images/Rectangle 4.png" alt="">
+                       <p>No Download. No Installs. Play 
+                        games Instantly on Gamer.</p>
+                </div>
+                <div class="video-single">
+                       <img src="./images/Rectangle 5.png" alt="">
+                       <p>Did you score?#unblockedgames 
+                        #school.</p>
+                </div>
+                <div class="video-single">
+                       <img src="./images/Rectangle 7.png" alt="">
+                       <p>Breaking game records 
+                        like OG</p>
+                </div>
+                <div class="video-single">
+                       <img src="./images/Rectangle 6.png" alt="">
+                       <p>Busted gaming on school laptop, 
+                        but you are still lit.</p>
+                </div>
+                
+            </div>
+        </section>
     </main>
 
     <footer>
