added hover in games section

--- a/index.html
+++ b/index.html
@@ -78,26 +78,69 @@
 
             <div class="video-container">
                 <div class="video-single">
-                       <img src="./images/Rectangle 4.png" alt="">
+                       <div class="image-container">
+                        <img class="image" src="./images/Rectangle 4.png" alt="">
+                        <div class="middle">
+                            <div><img  style="width: 40px;height: 40px;" src="./play-button 1.png" alt=""></div>
+                            <div class="text">Watch Now</div>
+                        </div>
+                       </div>
                        <p>No Download. No Installs. Play 
                         games Instantly on Gamer.</p>
                 </div>
                 <div class="video-single">
-                       <img src="./images/Rectangle 5.png" alt="">
+                    <div class="image-container">
+                        <img class="image" src="./images/Rectangle 5.png" alt="">
+                        <div class="middle">
+                            <div><img style="width: 40px;height: 40px;" src="./play-button 1.png" alt=""></div>
+                            <div class="text">Watch Now</div>
+                        </div>
+                       </div>
                        <p>Did you score?#unblockedgames 
                         #school.</p>
                 </div>
                 <div class="video-single">
-                       <img src="./images/Rectangle 7.png" alt="">
+                    <div class="image-container">
+                        <img class="image" src="./images/Rectangle 7.png" alt="">
+                        <div class="middle">
+                            <div><img style="width: 40px;height: 40px;" src="./play-button 1.png" alt=""></div>
+                            <div class="text">Watch Now</div>
+                        </div>
+                       </div>
                        <p>Breaking game records 
                         like OG</p>
                 </div>
                 <div class="video-single">
-                       <img src="./images/Rectangle 6.png" alt="">
+                    <div class="image-container">
+                        <img class="image" src="./images/Rectangle 6.png" alt="">
+                        <div class="middle">
+                            <div><img style="width: 40px;height: 40px;" src="./play-button 1.png" alt=""></div>
+                            <div class="text">Watch Now</div>
+                        </div>
+                       </div>
                        <p>Busted gaming on school laptop, 
                         but you are still lit.</p>
                 </div>
                 
+            </div>
+        </section>
+
+        <!-- play-instantly section -->
+        <section>
+            <div class="play-instantly-container">
+              <div class="play-instantly-title">
+                <h2>Play Instantly,
+                    No Downloads
+                    No Installs.</h2>
+                    <p>Play games online for free without 
+                        downloading. Just click the Play button 
+                        and play instantly in your browser.</p>
+              </div>
+        
+            <div class="play-instantly-image">
+                <img src="./images/Rectangle 55.png" alt="">
+            </div>
+
             </div>
         </section>
     </main>
