--- a/index.html
+++ b/index.html
@@ -126,14 +126,14 @@
         </section>
 
         <!-- play-instantly section -->
-        <section>
+        <section class="play-instantly-section">
             <div class="play-instantly-container">
               <div class="play-instantly-title">
-                <h2>Play Instantly,
-                    No Downloads
+                <h2><span>Play Instantly,</span><br>
+                    No Downloads <br>
                     No Installs.</h2>
-                    <p>Play games online for free without 
-                        downloading. Just click the Play button 
+                    <p>Play games online for free without <br> 
+                        downloading. Just click the Play button <br>
                         and play instantly in your browser.</p>
               </div>
         
@@ -141,6 +141,29 @@
                 <img src="./images/Rectangle 55.png" alt="">
             </div>
 
+            </div>
+            <div class="upper-image">
+                <img src="./images/Rectangle 66.png" alt="">
+            </div>
+        </section>
+        <section class="play-online-section">
+            <div class="play-online-container">
+              <div class="play-online-title">
+                <h2><span>Play Games <br>
+                    Online</span> Anywhere,<br> 
+                    Anytime</h2>
+                    <p>PC. dad s phone, moms tablet, or your Chromebook, 
+                        with Gamer you can play your favorite games online 
+                        for free, any time, anywhere , on any device.</p>
+              </div>
+        
+            <div class="play-online-image">
+                <img src="./images/Rectangle 67.png" alt="">
+            </div>
+
+            </div>
+            <div class="upper-image2">
+                <img src="./images/Rectangle 78.png" alt="">
             </div>
         </section>
     </main>
