added online playing section with tablet responsive

--- a/index.html
+++ b/index.html
@@ -146,6 +146,8 @@
                 <img src="./images/Rectangle 66.png" alt="">
             </div>
         </section>
+
+        <!-- play online section -->
         <section class="play-online-section">
             <div class="play-online-container">
               <div class="play-online-title">
