finished games option section with responsive

--- a/index.html
+++ b/index.html
@@ -168,6 +168,48 @@
                 <img src="./images/Rectangle 78.png" alt="">
             </div>
         </section>
+
+        <!-- game option's section start from here -->
+        <section class="game-option-scetion">
+            <div class="game-option-container">
+                <div class="single-game-option">
+                  <img src="./images/Rectangle 11.png" alt="">
+                  <p>Action Game</p>
+                </div>
+                <div class="single-game-option">
+                  <img src="./images/Rectangle 12.png" alt="">
+                  <p>Action Game</p>
+                </div>
+                <div class="single-game-option">
+                  <img src="./images/Rectangle 13.png" alt="">
+                  <p>Action Game</p>
+                </div>
+                <div class="single-game-option">
+                  <img src="./images/Rectangle 14.png" alt="">
+                  <p>Action Game</p>
+                </div>
+                <div class="single-game-option">
+                  <img src="./images/Rectangle 15.png" alt="">
+                  <p>Action Game</p>
+                </div>
+                <div class="single-game-option">
+                  <img src="./images/Rectangle 16.png" alt="">
+                  <p>Action Game</p>
+                </div>
+                <div class="single-game-option">
+                  <img src="./images/Rectangle 17.png" alt="">
+                  <p>Action Game</p>
+                </div>
+                <div class="single-game-option">
+                  <img src="./images/Rectangle 18.png" alt="">
+                  <p>Action Game</p>
+                </div>
+                <div class="single-game-option">
+                  <img src="./images/Rectangle 19.png" alt="">
+                  <p>Action Game</p>
+                </div>
+            </div>
+        </section>
     </main>
 
     <footer>
