--- a/index.html
+++ b/index.html
@@ -178,41 +178,78 @@
                 </div>
                 <div class="single-game-option">
                   <img src="./images/Rectangle 12.png" alt="">
-                  <p>Action Game</p>
+                  <p>Adventure Games</p>
                 </div>
                 <div class="single-game-option">
                   <img src="./images/Rectangle 13.png" alt="">
-                  <p>Action Game</p>
+                  <p>Arcade Game</p>
                 </div>
                 <div class="single-game-option">
                   <img src="./images/Rectangle 14.png" alt="">
-                  <p>Action Game</p>
+                  <p>Educational Game</p>
                 </div>
                 <div class="single-game-option">
                   <img src="./images/Rectangle 15.png" alt="">
-                  <p>Action Game</p>
+                  <p>Word Games</p>
                 </div>
                 <div class="single-game-option">
                   <img src="./images/Rectangle 16.png" alt="">
-                  <p>Action Game</p>
+                  <p>Role Palying Games</p>
                 </div>
                 <div class="single-game-option">
                   <img src="./images/Rectangle 17.png" alt="">
-                  <p>Action Game</p>
+                  <p>Music & Audio Games</p>
                 </div>
                 <div class="single-game-option">
                   <img src="./images/Rectangle 18.png" alt="">
-                  <p>Action Game</p>
+                  <p>Puzzle Game</p>
                 </div>
                 <div class="single-game-option">
                   <img src="./images/Rectangle 19.png" alt="">
-                  <p>Action Game</p>
+                  <p>Strategy Games</p>
                 </div>
             </div>
         </section>
     </main>
 
     <footer>
+        <section class="footer-section">
+             <div class="footer-container">
+               <div class="footer-title">
+                <img src="./images/Frame.png" alt="">
+                <h2><span>G</span>amer</h2>
+               </div>
+                 
+               <div class="footer-option">
+                <li>Our Story</li>
+                <li>Games</li>
+                <li>Web Games</li>
+                <li>Careers</li>
+                <li>support</li>
+                <li>My Account</li>
+               </div>
+
+               <div class="social-media-link">
+                <a href=""><i  class="fa-brands fa-twitter link"></i></a>
+                <a href=""><i  class="fa-brands fa-facebook link"></i></a>
+                <a href=""><i class="fa-brands fa-youtube link"></i></a>
+                <a href=""><i  class="fa-brands fa-linkedin-in link"></i></a>
+                <a href=""><i  class="fa-brands fa-instagram link"></i></a>
+                <a href=""><i  class="fa-brands fa-apple link"></i></a>
+               </div>
+
+               <div class="footer-privacy">
+                <li>Terms and Conditions</li>
+                <li> Privacy Policy</li>
+                <li> Cookie Policy</li>
+                <li> Privacy Setting</li>
+               </div>
+
+               <div class="copyright">
+                <p>Play Games @ Gamer @ 2000-2023 Gamer Bangladesh</p>
+               </div>
+             </div>
+        </section>
 
     </footer>
 </body>
