finished assignment2 with mobile and tablet responsive

--- a/index.html
+++ b/index.html
@@ -63,7 +63,8 @@
         </section>
         <!-- banner section ends here -->
 
-        <!-- optional section starts from here -->
+
+        <!--we are gamer section starts from here -->
         <section class="we-are-gamer-section">
            <div class="we-are-gamer-container">
             <div class="we-are-gamer-image">
@@ -82,7 +83,8 @@
             </div>
            </div>
         </section>
-        <!-- optional section ends from here -->
+        <!-- we are gamer section ends here -->
+
 
         <!-- funny games section start from here -->
         <section class="funny-games-section">
@@ -139,8 +141,10 @@
 
             </div>
         </section>
+        <!-- funny games section ends here -->
 
-        <!-- play-instantly section -->
+
+        <!-- play-instantly section starts here -->
         <section class="play-instantly-section">
             <div class="play-instantly-container">
                 <div class="play-instantly-title">
@@ -161,8 +165,10 @@
                 <img src="./images/Rectangle 66.png" alt="">
             </div>
         </section>
+        <!-- play-instantly section ends here -->
 
-        <!-- play online section -->
+
+        <!-- play online section starts here -->
         <section class="play-online-section">
             <div class="play-online-container">
                 <div class="play-online-title">
@@ -183,6 +189,46 @@
                 <img src="./images/Rectangle 78.png" alt="">
             </div>
         </section>
+        <!-- play online section ends here -->
+
+        <!-- Career section starts from here -->
+        <section class="career-section">
+            <div class="career-container">
+                <div class="career-title">
+                    <h3>Careers</h3>
+                    <p>Gamer is driven to create the best and most fun games for our millions of 
+                        players all around the world, and we,re always on the lookout for more top 
+                        talent to join our growing team. If you,d like to help us make great games 
+                        and be a part of Gamers bright future, we,d love to hear from you.</p>
+                    <div class="career-info-container">
+                        <div class="career-info">
+                            <p>Multimedia Artist +</p>
+                            <p>Data Engineer +</p>
+                            <p>Adroid Engineer +</p>
+                            <p>Server Developer +</p>
+                            <p>Group Financial Accountant +</p>
+                            <p>Senior User Acuisition Specialist +</p>          
+                        </div>
+                        <div class="career-info2">
+                          <p>Lisbon, Portugal</p>
+                          <p>Lisbon, Portugal</p>
+                          <p>Zoetermeer, Netherlands</p>
+                          <p>Lisbon, Portugal</p>
+                          <p>London, United Kingdom</p>
+                          <p>Lisbon, Portugal</p>
+                        </div>
+                    </div>
+                    <div class="careers-btn-container">
+                        <button class="careers-btn">SEE ALL POSITIONS</button>
+                    </div>
+                </div>
+
+                <div class="career-image">
+                    <img src="./images/Group 65.png" alt="">
+                </div>
+            </div>
+        </section>
+
 
         <!-- game option's section start from here -->
         <section class="game-option-scetion">
@@ -225,6 +271,7 @@
                 </div>
             </div>
         </section>
+         <!-- game option's section ends  here -->
     </main>
 
     <footer>
