--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                     <div class="image-container">
                         <img class="image" src="./images/Rectangle 4.png" alt="">
                         <div class="middle">
-                            <div><img style="width: 40px;height: 40px;" src="./play-button 1.png" alt=""></div>
+                            <div><i class="fa-solid fa-play"></i></div>
                             <div class="text">Watch Now</div>
                         </div>
                     </div>
@@ -109,7 +109,7 @@
                     <div class="image-container">
                         <img class="image" src="./images/Rectangle 5.png" alt="">
                         <div class="middle">
-                            <div><img style="width: 40px;height: 40px;" src="./play-button 1.png" alt=""></div>
+                            <div><i class="fa-solid fa-play"></i></div>
                             <div class="text">Watch Now</div>
                         </div>
                     </div>
@@ -120,7 +120,7 @@
                     <div class="image-container">
                         <img class="image" src="./images/Rectangle 7.png" alt="">
                         <div class="middle">
-                            <div><img style="width: 40px;height: 40px;" src="./play-button 1.png" alt=""></div>
+                            <div><i class="fa-solid fa-play"></i></div>
                             <div class="text">Watch Now</div>
                         </div>
                     </div>
@@ -131,7 +131,7 @@
                     <div class="image-container">
                         <img class="image" src="./images/Rectangle 6.png" alt="">
                         <div class="middle">
-                            <div><img style="width: 40px;height: 40px;" src="./play-button 1.png" alt=""></div>
+                            <div><i class="fa-solid fa-play"></i></div>
                             <div class="text">Watch Now</div>
                         </div>
                     </div>
